<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <View
                android:id="@+id/view_avatar_outline"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_avatar_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_avatar"
                app:layout_constraintBottom_toBottomOf="@id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@id/view_avatar_outline" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_profile"
                android:layout_width="114dp"
                android:layout_height="114dp"
                app:layout_constraintBottom_toBottomOf="@+id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@+id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@+id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@+id/view_avatar_outline"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:srcCompat="@drawable/profile" />

            <View
                android:id="@+id/view_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_avatar"
                app:layout_constraintBottom_toBottomOf="@id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@id/view_avatar_outline" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:importantForAccessibility="no"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/view_image"
                app:layout_constraintEnd_toEndOf="@+id/view_image"
                app:layout_constraintStart_toStartOf="@+id/view_image"
                app:layout_constraintTop_toTopOf="@+id/view_image"
                app:srcCompat="@drawable/ic_camera"
                app:tint="?colorOnSurface" />

            <View
                android:id="@+id/background_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_edit_profile"
                app:layout_constraintBottom_toBottomOf="@id/text_dob"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_avatar_outline"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/text_username"
                style="@style/ProfileTextViewStyle"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="@id/background_view"
                app:layout_constraintTop_toTopOf="@id/background_view" />

            <EditText
                android:id="@+id/input_username"
                style="@style/ProfileEditTextStyle"
                android:hint="@string/your_username"
                android:importantForAutofill="no"
                app:layout_constraintBottom_toBottomOf="@+id/text_username"
                app:layout_constraintEnd_toEndOf="@id/background_view"
                app:layout_constraintStart_toEndOf="@+id/text_username"
                app:layout_constraintTop_toTopOf="@+id/text_username"
                tools:ignore="LabelFor"
                tools:text="John Wick" />

            <View
                android:id="@+id/d1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="?colorOutlineVariant"
                app:layout_constraintEnd_toEndOf="@+id/input_username"
                app:layout_constraintStart_toStartOf="@+id/text_username"
                app:layout_constraintTop_toBottomOf="@id/text_username" />

            <TextView
                android:id="@+id/text_email"
                style="@style/ProfileTextViewStyle"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/background_view"
                app:layout_constraintTop_toBottomOf="@id/d1" />

            <EditText
                android:id="@+id/input_email"
                style="@style/ProfileEditTextStyle"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/your_email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="@+id/text_email"
                app:layout_constraintEnd_toEndOf="@+id/background_view"
                app:layout_constraintStart_toEndOf="@+id/text_email"
                app:layout_constraintTop_toTopOf="@+id/text_email"
                tools:ignore="LabelFor"
                tools:text="johnwick@gmail.com" />

            <View
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="?colorOutlineVariant"
                app:layout_constraintEnd_toEndOf="@+id/input_email"
                app:layout_constraintStart_toStartOf="@+id/text_email"
                app:layout_constraintTop_toBottomOf="@id/text_email" />

            <TextView
                android:id="@+id/text_phone"
                style="@style/ProfileTextViewStyle"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="@+id/background_view"
                app:layout_constraintTop_toBottomOf="@id/d2" />

            <EditText
                android:id="@+id/input_phone"
                style="@style/ProfileEditTextStyle"
                android:hint="@string/your_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="@+id/text_phone"
                app:layout_constraintEnd_toEndOf="@+id/background_view"
                app:layout_constraintStart_toEndOf="@+id/text_phone"
                app:layout_constraintTop_toTopOf="@+id/text_phone"
                tools:ignore="LabelFor"
                tools:text="0976 877 899" />

            <View
                android:id="@+id/d3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="?colorOutlineVariant"
                app:layout_constraintEnd_toEndOf="@+id/input_phone"
                app:layout_constraintStart_toStartOf="@+id/text_phone"
                app:layout_constraintTop_toBottomOf="@id/text_phone" />

            <TextView
                android:id="@+id/text_gender"
                style="@style/ProfileTextViewStyle"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="@+id/background_view"
                app:layout_constraintTop_toBottomOf="@id/d3" />

            <EditText
                android:id="@+id/input_gender"
                style="@style/ProfileEditTextStyle"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/your_gender"
                android:importantForAutofill="no"
                android:inputType="none"
                app:layout_constraintBottom_toBottomOf="@+id/text_gender"
                app:layout_constraintEnd_toEndOf="@+id/background_view"
                app:layout_constraintStart_toEndOf="@+id/text_gender"
                app:layout_constraintTop_toTopOf="@+id/text_gender"
                tools:ignore="LabelFor"
                tools:text="Male" />

            <View
                android:id="@+id/d4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="?colorOutlineVariant"
                app:layout_constraintEnd_toEndOf="@+id/input_gender"
                app:layout_constraintStart_toStartOf="@+id/text_gender"
                app:layout_constraintTop_toBottomOf="@id/text_gender" />

            <TextView
                android:id="@+id/text_dob"
                style="@style/ProfileTextViewStyle"
                android:layout_marginBottom="24dp"
                android:text="@string/date_of_birth"
                app:layout_constraintBottom_toBottomOf="@id/background_view"
                app:layout_constraintStart_toStartOf="@+id/background_view"
                app:layout_constraintTop_toBottomOf="@id/d4" />

            <EditText
                android:id="@+id/input_dob"
                style="@style/ProfileEditTextStyle"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/your_date_of_birth"
                android:importantForAutofill="no"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="@+id/text_dob"
                app:layout_constraintEnd_toEndOf="@+id/background_view"
                app:layout_constraintStart_toEndOf="@+id/text_dob"
                app:layout_constraintTop_toTopOf="@+id/text_dob"
                tools:ignore="LabelFor"
                tools:text="30/12/2002" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/touch_interceptor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>