...
    <string name="end_time_must_be_later_than_start_time">End time must be later than Start time!</string>
    <string name="error">Error!</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="choose_gender">Choose gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_gender">Your gender</string>
    <string name="your_date_of_birth">Your date of birth</string>
    <string name="your_username">Your username</string>
    <string name="your_email_address">Your email address</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_cant_change_email_address">You can\'t change email address.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send">Send</string>
    <string name="sending_email_message">Provide your account\'s email for which you want to reset your password.
        Then check your email to complete the process.</string>
...
