<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
...
                app:layout_constraintStart_toStartOf="@+id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@+id/view_avatar_outline"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="?colorOnSurface"
                android:textSize="17sp"
                android:textStyle="bold"
...
                android:paddingBottom="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_top">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:id="@+id/ic_edit"
...
