...
        <argument
            android:name="type"
            app:argType="integer"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/account_fragment"
        android:name="com.example.wordnotes.ui.account.AccountFragment"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_account_fragment_to_edit_profile_fragment"
            app:destination="@id/edit_profile_fragment" />
        <action
            android:id="@+id/action_account_fragment_to_reminder_fragment"
            app:destination="@id/reminder_fragment" />
    </fragment>
    <fragment
        android:id="@+id/reminder_fragment"
        android:name="com.example.wordnotes.ui.account.reminder.ReminderFragment"
        tools:layout="@layout/fragment_reminder" />
    <fragment
...
